package server

import (
    "context"
    "log"
    "net"
    pb "payment-service/payment"
    "google.golang.org/grpc"
)

// Struct que implementa el servicio
type PaymentServer struct {
    pb.UnimplementedPaymentServiceServer
}

// Implementaci√≥n del m√©todo ProcessPayment
func (s *PaymentServer) ProcessPayment(ctx context.Context, req *pb.PaymentRequest) (*pb.PaymentResponse, error) {
    // Aqu√≠ va tu l√≥gica de pago, por ahora devolvemos √©xito simulado
    return &pb.PaymentResponse{
        Success:       true,
        TransactionId: "tx123",
        Message:       "Pago procesado correctamente",
    }, nil
}

// Funci√≥n para iniciar el servidor (ahora retorna error)
func StartGRPCServer() error {
    lis, err := net.Listen("tcp", ":50052")
    if err != nil {
        return err
    }
    
    grpcServer := grpc.NewServer()
    pb.RegisterPaymentServiceServer(grpcServer, &PaymentServer{})
    
    log.Println("üöÄ Servidor Payment gRPC corriendo en :50052")
    
    return grpcServer.Serve(lis)
}